<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment_tutor"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph_tutor" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigationMenu"
        style="@style/Widget.App.BottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:menu="@menu/navigation_menu_tutor"
        app:menuGravity="center" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>